fix: 🎨 small fixes on mobile

--- a/src/components/media-types/image/index.module.scss
+++ b/src/components/media-types/image/index.module.scss
@@ -18,6 +18,7 @@
     display: block;
     max-width: 100%;
     height: auto;
+    max-height: $max-token-height;
     margin: 0 auto;
   }
 }
